--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.2.1+1
 homepage: https://github.com/kfiross/flutter_facebook_login_web
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.10.0"
+  sdk: ">=2.19.0 <3.0.0"
+  #flutter: ">=1.10.0"
 
 dependencies:
   flutter:
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
   # For supporting web sdk and js-dart interop
-  js: ^0.6.2
+  js: ^0.6.7
 
 dev_dependencies:
   flutter_test:
